# IB-ME

./: .gitignore  CMakeLists.txt  Makefile  README.md
benchmark/: CMakeLists.txt  benchmark.c  benchmark.h
benchmark/host/: Makefile  ibme_benchmark.c
benchmark/host/include/: ibme_benchmark.h
benchmark/ta/: Makefile  ibme_benchmark_ta.c  ibme_benchmark_ta_private.h  sub.mk  ta_entry.c  user_ta_header_defines.h
benchmark/ta/include/: ibme_benchmark_ta.h
demo/: CMakeLists.txt  demo.c  demo.h
demo/host/: Makefile  ibme_demo.c
demo/host/include/: ibme_demo.h
demo/ta/: Makefile  ibme_demo_ta.c  sub.mk  user_ta_header_defines.h
demo/ta/include/: ibme_demo_ta.h
ibme/: CMakeLists.txt  cipher.c  cipher.h  hash.c  hash.h  ibme.c  ibme.h  keys.c  keys.h  padding.c  padding.h
include/: cipher.h  hash.h  ibme.h  keys.h  memory.h
lib/: Makefile  sub.mk
lib/include/: cipher.h  hash.h  ibme.h  keys.h  padding.h
lib/src/: cipher.c  hash.c  ibme.c  keys.c  padding.c  padding.h  sub.mk  utils.h
src/: cipher.c  hash.c  ibme.c  keys.c  memory.c  padding.c  utils.c
